--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2023 Continental Hotel. All rights reserved.</p>
+    <p>&copy; 2023 Continental Hotel. All rights reserved.Testing123</p>
   </footer>
 </body>
 </html>
