--- a/Home/index.html
+++ b/Home/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class="amenities-text">
       <h2>Discover the perfect balance of tranquility and rejuvenation with our luxurious amenities. Dive into our sparkling swimming pool, where refreshing moments await, or surrender to the serenity of our world-class spa, offering an array of indulgent treatments</h2>
-      <a href="../Amenities/amenities.html" class="amenities-button">Discover More and</a>
+      <a href="../Amenities/amenities.html" class="amenities-button">Discover More</a>
     </div>
   </section>
 
