Addition of rooms.html for the rooms page

--- a/Home/index.html
+++ b/Home/index.html
@@ -15,7 +15,7 @@
       <img src="../../images/logo.png" alt="Continental Hotel logo">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="../Rooms/rooms.html">Rooms</a></li>
+        <li><a href="rooms.html">Rooms</a></li>
         <li><a href="../Dining/dining.html">Dining</a></li>
         <li><a href="../Amenities/amenities.html">Amenities</a></li>
         <li><a href="../Contact/contact.html">Contact</a></li>
