--- a/Home/home.html
+++ b/Home/home.html
@@ -40,15 +40,15 @@
     </div>
     <div class="room-text">
       <h2>Indulge in Comfort and Elegance with Our Exquisite Rooms</h2>
-        <a href="../Rooms/rooms.html" class="rooms-button">View Rooms</a>
+        <a href="rooms.html" class="rooms-button">View Rooms</a>
     </div>
 
     <div class="dining-image">
-      <img src="../../images/dining-table.png" alt="dining table">
+      <img src="../images/dining-table.png" alt="dining table">
     </div>
     <div class="dining-text">
       <h2>Indulge in exquisite culinary delights</h2>
-      <a href="../Dining/dining.html" class="dining-button">Explore Dining</a>
+      <a href="dining.html" class="dining-button">Explore Dining</a>
     </div>
 
     <div class="amenities-image">
