--- a/Home/booking.html
+++ b/Home/booking.html
@@ -23,7 +23,7 @@
       <a href="booking.html">BOOK NOW</a>
     </div>
   </nav>
-    <form action="lmao.html">
+    <form action="payment.html">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
         
