--- a/Home/payment.html
+++ b/Home/payment.html
@@ -19,7 +19,7 @@
           <li><a href="contact.html">CONTACT</a></li>
         </ul>
         <div class="book-now-button">
-          <a href="../Booking/booking.html">BOOK NOW</a>
+          <a href="booking.html">BOOK NOW</a>
         </div>
       </nav>
     
