--- a/Home/home.html
+++ b/Home/home.html
@@ -30,7 +30,7 @@
     <img src="../../images/hotel-background.png" alt="hotel background">
     <div class="hero-text-container">
       <h1>Experience the epitome of luxury and comfort at Continental Hotel</h1>
-      <a href="../Booking/booking.html" class="hero-book-now-button">BOOK HERE</a>
+      <a href="booking.html" class="hero-book-now-button">BOOK HERE</a>
     </div>
   </section>
   
