--- a/Home/home.html
+++ b/Home/home.html
@@ -25,12 +25,14 @@
         <a href="booking.html">BOOK NOW</a>
       </div>
     </nav>
+
   </header>
   <section class="hero-section">
     <img src="../../images/hotel-background.png" alt="hotel background">
     <div class="hero-text-container">
       <h1>Experience the epitome of luxury and comfort at Continental Hotel</h1>
       <a href="booking.html" class="hero-book-now-button">BOOK HERE</a>
+      <a href="member.html" class="sign-in"><b>SIGN IN or JOIN</b></a>
     </div>
   </section>
   
