Update Member page
added an image and a text

--- a/Home/member.html
+++ b/Home/member.html
@@ -25,8 +25,13 @@
          <a href="../Booking/booking.html">BOOK NOW</a>
        </div>
      </nav>
+   </header>
+ </body>
 </head>
 <body>
-   
+    <img src="../../images/reception.jpeg" class="member-img" alt="hotel background">
+    <div class="hero-text-container">
+      <h1>Become a Member now!</h1>
+    </div>
 </body>
 </html>
