--- a/Home/member.html
+++ b/Home/member.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" type="text/css" href="member.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
  </head>
  <body>
    <header>
@@ -27,11 +27,10 @@
      </nav>
    </header>
  </body>
-</head>
 <body>
-    <img src="../../images/reception.jpeg" class="member-img" alt="hotel background">
-    <div class="hero-text-container">
-      <h1>Become a Member now!</h1>
-    </div>
+    <div class="container">
+      <img class="image" src="../../images/reception.jpeg" alt="Image">
+      <div class="text-overlay">Become a Member now for Free!</div>
+    </div>  
 </body>
 </html>
