--- a/Home/home.html
+++ b/Home/home.html
@@ -27,8 +27,24 @@
     </nav>
 
   </header>
+  
   <section class="hero-section">
     <img src="../../images/hotel-background.png" alt="hotel background">
+    <section class=" book">
+      <div class=" container flex_space">
+        <div class= "text">
+          <h1> <span>Book </span> Your Rooms </h1>
+        </div>
+        <div class=" form">
+          <input type="date" placeholder="Arrival Date">
+          <input type="date" placeholder="Departure Date">
+          <input type="number" placeholder="Adults">
+          <input type="number" placeholder="Children">
+          <input type="submit" value=" Check Availability">
+        </div>
+  
+      </div>
+    </section>
     <div class="hero-text-container">
       <h1>Experience the epitome of luxury and comfort at Continental Hotel</h1>
       <a href="booking.html" class="hero-book-now-button">BOOK HERE</a>
@@ -36,6 +52,8 @@
     </div>
   </section>
   
+ 
+
   <section class="grid-container">
     <div class="room-image">
       <img src="../../images/hotel-room.png">
