--- a/Home/amenities.html
+++ b/Home/amenities.html
@@ -9,6 +9,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
 </head>
+<footer class="top-footer">
+  <div class="footer-buttons">
+    <button class="manage.html">MANAGE BOOKING</button>
+    <button class="signin.html">SIGN IN</button>
+  </div>
+</footer>
 <body>
    <header>
       <nav>
