--- a/Home/member.html
+++ b/Home/member.html
@@ -9,6 +9,13 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
  </head>
+ <footer class="top-footer">
+  <div class="footer-buttons">
+    <button class="manage.html">MANAGE BOOKING</button>
+    <button class="signin.html">SIGN IN</button>
+  </div>
+</footer>
+
  <body>
    <header>
      <nav>
@@ -30,7 +37,37 @@
 <body>
     <div class="container">
       <img class="image" src="../../images/reception.jpeg" alt="Image">
-      <div class="text-overlay">Become a Member now for Free!</div>
-    </div>  
+      <div class="text-overlay">Become a Member now for FREE!</div>
+    </div>
+    
+<section class="grid-container">
+      <div class="room-image">
+        <img src="../../images/credit_card.jpg">
+      </div>
+      <div class="room-text">
+        <h2>Indulge in Comfort and Elegance with Our Exquisite Rooms</h2>
+          <a href="rooms.html" class="rooms-button">View Rooms</a>
+      </div>
+  
+      <div class="dining-image">
+        <img src="../images/dining-table.png" alt="dining table">
+      </div>
+      <div class="dining-text">
+        <h2>Indulge in exquisite culinary delights</h2>
+        <a href="dining.html" class="dining-button">Explore Dining</a>
+      </div>
+  
+      <div class="amenities-image">
+        <img src="../../images/hotel-spa.png" alt="hotel spa">
+      </div>
+      <div class="amenities-text">
+        <h2>Discover the perfect balance of tranquility and rejuvenation with our luxurious amenities. Dive into our sparkling swimming pool, where refreshing moments await, or surrender to the serenity of our world-class spa, offering an array of indulgent treatments</h2>
+        <a href="../Amenities/amenities.html" class="amenities-button">Discover More</a>
+      </div>
+</section>
+  
+    <footer>
+      <p>&copy; 2023 Continental Hotel. All rights reserved.Testing123</p>
+    </footer>
 </body>
 </html>
