--- a/Home/member.html
+++ b/Home/member.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Continental_Homepage</title>
+   <title>Continental_Memberspage</title>
    <link rel="stylesheet" type="text/css" href="member.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,8 +11,9 @@
  </head>
  <footer class="top-footer">
   <div class="footer-buttons">
-    <button class="manage.html">MANAGE BOOKING</button>
-    <button class="signin.html">SIGN IN</button>
+    <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
+    <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
+    <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
   </div>
 </footer>
 
@@ -37,32 +38,29 @@
 <body>
     <div class="container">
       <img class="image" src="../../images/reception.jpeg" alt="Image">
-      <div class="text-overlay">Become a Member now for FREE!</div>
+      <div class="text-overlay">Unlock a world of exclusive benefits and luxurious rewards – become a member now and elevate your stay experience with us!</div>
     </div>
     
 <section class="grid-container">
       <div class="room-image">
         <img src="../../images/credit_card.jpg">
       </div>
-      <div class="room-text">
-        <h2>Indulge in Comfort and Elegance with Our Exquisite Rooms</h2>
-          <a href="rooms.html" class="rooms-button">View Rooms</a>
+      <div class="loyality-text">
+        <h2>Earn valuable reward points with every stay at our hotel. The more you stay, the more you earn, bringing you closer to exclusive benefits and exciting rewards.</h2>
       </div>
   
       <div class="dining-image">
-        <img src="../images/dining-table.png" alt="dining table">
+        <img src="../images/chef.jpg" alt="dining table">
       </div>
       <div class="dining-text">
-        <h2>Indulge in exquisite culinary delights</h2>
-        <a href="dining.html" class="dining-button">Explore Dining</a>
+        <h2>Be entitled exclusive discounts at our on-site restaurants, allowing you to savor our delectable cuisines at a fraction of the regular price.</h2>
       </div>
   
       <div class="amenities-image">
-        <img src="../../images/hotel-spa.png" alt="hotel spa">
+        <img src="../../images/gym.jpg" alt="hotel spa">
       </div>
       <div class="amenities-text">
-        <h2>Discover the perfect balance of tranquility and rejuvenation with our luxurious amenities. Dive into our sparkling swimming pool, where refreshing moments await, or surrender to the serenity of our world-class spa, offering an array of indulgent treatments</h2>
-        <a href="../Amenities/amenities.html" class="amenities-button">Discover More</a>
+        <h2>Your membership grants you priority when booking reservations at our on-site restaurants, spa services, gyms and any special events or activities enabling you not to worry about missing out on your preferred time slots or experiences.</h2>
       </div>
 </section>
   
