--- a/Home/booking.html
+++ b/Home/booking.html
@@ -8,6 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
 </head>
+<footer class="top-footer">
+  <div class="footer-buttons">
+    <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
+    <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
+    <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
+  </div>
+</footer>
 <body>
   <nav>
     <img src="../../images/logo.png" alt="Continental Hotel logo">
