--- a/Home/contact.html
+++ b/Home/contact.html
@@ -11,8 +11,9 @@
 </head>
 <footer class="top-footer">
   <div class="footer-buttons">
-    <button class="manage.html">MANAGE BOOKING</button>
-    <button class="signin.html">SIGN IN</button>
+    <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
+    <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
+    <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
   </div>
 </footer>
 <body>
