--- a/Home/dining.html
+++ b/Home/dining.html
@@ -11,8 +11,9 @@
 </head>
 <footer class="top-footer">
   <div class="footer-buttons">
-    <button class="manage.html">MANAGE BOOKING</button>
-    <button class="signin.html">SIGN IN</button>
+    <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
+    <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
+    <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
   </div>
 </footer>
 <body>
@@ -28,7 +29,7 @@
           <li><a href="contact.html">CONTACT</a></li>
         </ul>
         <div class="book-now-button">
-          <a href="../Booking/booking.html">BOOK NOW</a>
+          <a href="booking.html">BOOK NOW</a>
         </div>
       </nav>
     </header>
