--- a/Home/home.html
+++ b/Home/home.html
@@ -11,8 +11,9 @@
 </head>
 <footer class="top-footer">
   <div class="footer-buttons">
-    <button class="manage.html">MANAGE BOOKING</button>
-    <button class="signin.html">SIGN IN</button>
+    <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
+    <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
+    <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
   </div>
 </footer>
 <body>
@@ -31,7 +32,6 @@
         <a href="booking.html">BOOK NOW</a>
       </div>
     </nav>
-
   </header>
   
   <section class="hero-section">
