--- a/Home/member.html
+++ b/Home/member.html
@@ -40,6 +40,10 @@
       <img class="image" src="../../images/reception.jpeg" alt="Image">
       <div class="text-overlay">Unlock a world of exclusive benefits and luxurious rewards – become a member now and elevate your stay experience with us!</div>
     </div>
+
+    <div class="hero-text-container">
+      <a href="signup.html" class="hero-book-now-button">SIGN UP FOR FREE NOW</a>
+    </div>
     
 <section class="grid-container">
       <div class="room-image">
