--- a/Home/home.html
+++ b/Home/home.html
@@ -25,6 +25,7 @@
         <li><a href="rooms.html">ROOMS</a></li>
         <li><a href="dining.html">DINING</a></li>
         <li><a href="amenities.html">AMENITIES</a></li>
+        <li><a href="events.html">EVENTS</a></li>
         <li><a href="member.html">MEMBERS</a></li>
         <li><a href="contact.html">CONTACT</a></li>
       </ul>
