--- a/Home/signup.html
+++ b/Home/signup.html
@@ -21,12 +21,13 @@
      <nav>
        <img src="../../images/logo.png" alt="Continental Hotel logo">
        <ul>
-         <li><a href="home.html">HOME</a></li>
-         <li><a href="rooms.html">ROOMS</a></li>
-         <li><a href="dining.html">DINING</a></li>
-         <li><a href="amenities.html">AMENITIES</a></li>
-         <li><a href="member.html">MEMBERS</a></li>
-         <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="rooms.html">ROOMS</a></li>
+        <li><a href="dining.html">DINING</a></li>
+        <li><a href="amenities.html">AMENITIES</a></li>
+        <li><a href="events.html">EVENTS</a></li>
+        <li><a href="member.html">MEMBERS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
        </ul>
        <div class="book-now-button">
          <a href="booking.html">BOOK NOW</a>
