--- a/Home/signup.html
+++ b/Home/signup.html
@@ -36,7 +36,7 @@
 
  <body>
    <div class="container">
-     <h1>Hotel Membership Sign Up</h1>
+     <h1 class="description">Hotel Membership Sign Up</h1>
      <form id="signup-form" action="#" method="POST">
        <label for="fullname">Full Name:</label>
        <input type="text" id="fullname" name="fullname" required>
@@ -53,5 +53,6 @@
        <button class="submit" type="submit">Sign Up</button>
      </form>
    </div>
+   <script src="signup.js"></script>
 </body>
 </html>
