--- a/Home/amenities.html
+++ b/Home/amenities.html
@@ -33,5 +33,41 @@
         </div>
       </nav>
     </header>
-</body>
+    <h2>Amenities</h2>
+    <h3>Swimming Pool and Jacuzzi</h3>
+    <div class="flex unflex">
+      <img class="content" width="400" height="266.9" src="../images/pool.jpg">
+      <div class="para unpara content">
+        <p>The hotel swimming pool provides a refreshing retreat for guests, inviting them to relax in its inviting waters and enjoy moments of leisure. Surrounded by comfortable loungers and lush greenery, it offers a serene oasis to escape from the stresses of daily life, leaving visitors feeling rejuvenated and content.</p>
+        <br>
+        <p>Location: Level 3, Left Door.</p>
+        <br>
+        <p>The hotel jacuzzi offers a luxurious and indulgent experience for guests, enveloping them in its warm, bubbling waters. Nestled in a private setting, it provides a serene escape to unwind and soothe tired muscles. With its therapeutic jets and intimate ambiance, the jacuzzi elevates relaxation to a whole new level.</p>
+        <br>
+        <p>Location: Level 3, Rear Door.</p>
+      </div>
+      <img class="content" width="400" height="265" src="../images/jacuzzi.jpg">
+    </div>
+    <h3>Joseph's Bar</h3>
+    <div class="flex unflex">
+      <img class="content" width="400" height="266.8" src="../images/bar.jpg">
+      <div class="para content">
+        <p>The hotel bar is a captivating space that encapsulates the essence of conviviality and relaxation. With its stylish decor and inviting ambiance, it beckons guests to unwind and savor the moment. Talented mixologists concoct an array of delightful cocktails, catering to diverse tastes and preferences. Here, stories are exchanged, laughter resonates, and new friendships are forged. It's a haven for solo travelers seeking companionship and groups of friends celebrating life's milestones. The hotel bar serves as a social nexus, bringing together people from different walks of life to share in the joy of camaraderie. Whether it's a quiet nightcap or an energetic gathering, the hotel bar elevates the overall guest experience, leaving an indelible mark on their memories.</p>
+        <br>
+        <p>Location: Basement 1</p>
+      </div>
+      <img class="content" width="400" height="267" src="../images/cueball.jpg">
+    </div>    
+    <h3>The Lounge</h3>
+    <div class="flex unflex">
+      <img class="content" width="400" height="225" src="../images/lounge.jpg">
+      <div class="para content">
+        <p>The hotel lounge is a versatile and inviting space that caters to both relaxation and productivity. With its comfortable seating, warm ambiance, and free Wi-Fi, it becomes a perfect spot for guests to hang around and work. The soothing atmosphere provides a conducive environment for focused tasks, while the well-equipped amenities ensure convenience. Whether freelancers, business travelers, or guests simply catching up on emails, the lounge fosters a seamless blend of work and leisure. The friendly staff and availability of refreshments further enhance the experience, making the hotel lounge a preferred destination for those seeking a productive yet cozy space to stay connected and get things done.</p>
+        <br>
+        <p>Location: Level 10 #10-35</p>
+      </div>
+      <img class="content" width="400" height="266.7" src="../images/guy.jpg">
+    </div>
+    <h2></h2>
+  </body>
 </html>
