Try opening the page with chrome now

--- a/Home/member.html
+++ b/Home/member.html
@@ -20,7 +20,7 @@
  <body>
    <header>
      <nav>
-       <img src="../../images/logo.png" alt="Continental Hotel logo">
+       <img src="../images/logo.png" alt="Continental Hotel logo">
        <ul>
         <li><a href="home.html">HOME</a></li>
         <li><a href="rooms.html">ROOMS</a></li>
@@ -37,7 +37,7 @@
  </body>
 <body>
     <div class="container">
-      <img class="image" src="../../images/reception.jpeg" alt="Image">
+      <img class="image" src="../images/reception.jpeg" alt="Image">
       <div class="text-overlay">Unlock a world of exclusive benefits and luxurious rewards – become a member now and elevate your stay experience with us!</div>
     </div>
 
@@ -47,7 +47,7 @@
     
 <section class="grid-container">
       <div class="room-image">
-        <img src="../../images/credit_card.jpg">
+        <img src="../images/credit_card.jpg">
       </div>
       <div class="loyality-text">
         <h2>Earn valuable reward points with every stay at our hotel. The more you stay, the more you earn, bringing you closer to exclusive benefits and exciting rewards.</h2>
@@ -61,7 +61,7 @@
       </div>
   
       <div class="amenities-image">
-        <img src="../../images/gym.jpg" alt="hotel spa">
+        <img src="../images/gym.jpg" alt="hotel spa">
       </div>
       <div class="amenities-text">
         <h2>Your membership grants you priority when booking reservations at our on-site restaurants, spa services, gyms and any special events or activities enabling you not to worry about missing out on your preferred time slots or experiences.</h2>
