--- a/Home/amenities.html
+++ b/Home/amenities.html
@@ -19,7 +19,7 @@
 <body>
    <header>
       <nav>
-        <img src="../../images/logo.png" alt="Continental Hotel logo">
+        <img src="/images/logo.png" alt="Continental Hotel logo">
         <ul>
           <li><a href="home.html">HOME</a></li>
           <li><a href="rooms.html">ROOMS</a></li>
