--- a/Home/home.html
+++ b/Home/home.html
@@ -11,7 +11,7 @@
 </head>
 <footer class="top-footer">
   <div class="footer-buttons">
-    <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
+    <button><a class="fbutton" href="booking.html">MANAGE BOOKING</a></button>
     <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
     <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
   </div>
@@ -19,7 +19,7 @@
 <body>
   <header>
     <nav>
-      <img src="../../images/logo.png" alt="Continental Hotel logo">
+      <img src="/images/logo.png" alt="Continental Hotel logo">
       <ul>
         <li><a href="home.html">HOME</a></li>
         <li><a href="rooms.html">ROOMS</a></li>
@@ -35,7 +35,7 @@
   </header>
   
   <section class="hero-section">
-    <img src="../../images/hotel-background.png" alt="hotel background">
+    <img src="/images/hotel-background.png" alt="hotel background">
     <section class=" book">
       <div class=" container flex_space">
         <div class= "text">
