--- a/Home/booking.html
+++ b/Home/booking.html
@@ -17,7 +17,7 @@
 </footer>
 <body>
   <nav>
-    <img src="logo.png" alt="Continental Hotel logo">
+    <img src="../images/logo.png" alt="Continental Hotel logo">
     <ul>
       <li><a href="home.html">HOME</a></li>
       <li><a href="rooms.html">ROOMS</a></li>
