--- a/Home/home.html
+++ b/Home/home.html
@@ -19,7 +19,7 @@
 <body>
   <header>
     <nav>
-      <img src="/images/logo.png" alt="Continental Hotel logo">
+      <img src="../images/logo.png" alt="Continental Hotel logo">
       <ul>
         <li><a href="home.html">HOME</a></li>
         <li><a href="rooms.html">ROOMS</a></li>
@@ -35,7 +35,7 @@
   </header>
   
   <section class="hero-section">
-    <img src="/images/hotel-background.png" alt="hotel background">
+    <img src="../images/hotel-background.png" alt="hotel background">
     <section class=" book">
       <div class=" container flex_space">
         <div class= "text">
@@ -62,7 +62,7 @@
 
   <section class="grid-container">
     <div class="room-image">
-      <img src="../../images/hotel-room.png">
+      <img src="../images/hotel-room.png">
     </div>
     <div class="room-text">
       <h2>Indulge in Comfort and Elegance with Our Exquisite Rooms</h2>
@@ -78,7 +78,7 @@
     </div>
 
     <div class="amenities-image">
-      <img src="../../images/hotel-spa.png" alt="hotel spa">
+      <img src="../images/hotel-spa.png" alt="hotel spa">
     </div>
     <div class="amenities-text">
       <h2>Discover the perfect balance of tranquility and rejuvenation with our luxurious amenities. Dive into our sparkling swimming pool, where refreshing moments await, or surrender to the serenity of our world-class spa, offering an array of indulgent treatments</h2>
