--- a/Home/payment.html
+++ b/Home/payment.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <img src="../../images/logo.png" alt="Continental Hotel logo">
+        <img src="../images/logo.png" alt="Continental Hotel logo">
         <ul>
           <li><a href="home.html">HOME</a></li>
           <li><a href="rooms.html">ROOMS</a></li>
