--- a/Home/home.html
+++ b/Home/home.html
@@ -26,7 +26,6 @@
         <li><a href="dining.html">DINING</a></li>
         <li><a href="amenities.html">AMENITIES</a></li>
         <li><a href="member.html">MEMBERS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
       </ul>
       <div class="book-now-button">
         <a href="booking.html">BOOK NOW</a>
@@ -57,8 +56,6 @@
       <a href="member.html" class="sign-in"><b>SIGN IN or JOIN</b></a>
     </div>
   </section>
-  
- 
 
   <section class="grid-container">
     <div class="room-image">
@@ -87,7 +84,18 @@
   </section>
 
   <footer>
-    <p>&copy; 2023 Continental Hotel. All rights reserved.Testing123</p>
+      <div class="footer-container">
+          <div class="contact-button">
+              <a href="contact.html">Contact Us</a>
+          </div>
+          <div class="social-icons">
+              <a href="#" class="icon-link"><img src="../images/twitter.png" alt="Twitter"></a>
+              <a href="https://www.instagram.com/dhayananddd/" class="icon-link"><img src="../images/instagram.png" alt="Instagram"></a>
+              <a href="#" class="icon-link"><img src="../images/facebook.png" alt="Facebook"></a>
+              <a href="https://www.youtube.com/watch?v=AInjPi8d5Sg" class="icon-link"><img src="../images/youtube.png" alt="YouTube"></a>
+          </div>
+      </div>
+    <p>&copy; 2023 Continental Hotel. All rights reserved.</p>
   </footer>
 </body>
 </html>
