Sign Up page change

--- a/Home/rooms.html
+++ b/Home/rooms.html
@@ -28,9 +28,10 @@
          <li><a href="member.html">MEMBERS</a></li>
        </ul>
        <div class="book-now-button">
-         <a href="../Booking/booking.html">BOOK NOW</a>
+         <a href="../Home/booking.html">BOOK NOW</a>
        </div>
      </nav>
+    </header>
 
      <footer>
       <div class="footer-container">
