--- a/Home/home.html
+++ b/Home/home.html
@@ -83,19 +83,21 @@
     </div>
   </section>
 
+
   <footer>
-      <div class="footer-container">
-          <div class="contact-button">
-              <a href="contact.html">Contact Us</a>
-          </div>
-          <div class="social-icons">
-              <a href="#" class="icon-link"><img src="../images/twitter.png" alt="Twitter"></a>
-              <a href="https://www.instagram.com/dhayananddd/" class="icon-link"><img src="../images/instagram.png" alt="Instagram"></a>
-              <a href="#" class="icon-link"><img src="../images/facebook.png" alt="Facebook"></a>
-              <a href="https://www.youtube.com/watch?v=AInjPi8d5Sg" class="icon-link"><img src="../images/youtube.png" alt="YouTube"></a>
-          </div>
-      </div>
-    <p>&copy; 2023 Continental Hotel. All rights reserved.</p>
-  </footer>
+    <div class="footer-container">
+        <div class="contact-button">
+            <a href="contact.html">Contact Us</a>
+        </div>
+        <div class="social-icons">
+            <a href="#" class="icon-link"><img src="../images/twitter.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/dhayananddd/" class="icon-link"><img src="../images/instagram.png" alt="Instagram"></a>
+            <a href="#" class="icon-link"><img src="../images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.youtube.com/watch?v=AInjPi8d5Sg" class="icon-link"><img src="../images/youtube.png" alt="YouTube"></a>
+        </div>
+    </div>
+  <p>&copy; 2023 Continental Hotel. All rights reserved.</p>
+</footer>
+</body>
 </body>
 </html>
