--- a/Home/signup.html
+++ b/Home/signup.html
@@ -48,7 +48,14 @@
  
        <label for="phone">Phone Number:</label>
        <input type="tel" id="phone" name="phone" required>
- 
+       
+       <label class="checkbox">
+        <input type="checkbox" id="agreeCheckbox">
+        I agree to the terms and conditions
+      </label>
+
+      <h4 class="linktosignin">Already a member? <a href="signin.html">Sign in Here</a></h4>
+
        <button class="submit" type="submit">Sign Up</button>
      </form>
    </div>
@@ -65,8 +72,8 @@
             <a href="#" class="icon-link"><img src="../images/facebook.png" alt="Facebook"></a>
             <a href="https://www.youtube.com/watch?v=AInjPi8d5Sg" class="icon-link"><img src="../images/youtube.png" alt="YouTube"></a>
         </div>
-    </div>
   <p>&copy; 2023 Continental Hotel. All rights reserved.</p>
+</div>  
 </footer>
 </body>
 </html>
