changed font to Merriweather , serif

--- a/Home/contact.html
+++ b/Home/contact.html
@@ -36,9 +36,19 @@
  <body>
    <div class="container">
      <h1 class="description">Contact Us</h1>
+     <h2>Location</h2>
+     <br>
+     <ul>180 Ang Mo Kio Ave 8, Singapore 569830</ul>
+     <br>
+     <h2>Opening Hours</h2>
+     <br>
+     <ul>Sunday - Thursday, 11am - 10pm</ul>
+     <br>
+     <ul> Friday, Saturday and Eve of Public Holiday, 11am - 11pm</ul>
+     <br>
     <img src="https://burst.shopifycdn.com/photos/a-phone-on-a-blue-background-with-contact-us.jpg?width=1200&format=pjpg&exif=1&iptc=1" id="home">
     <br></br>
-     <h2>Get in touch with our Team.</h2>
+     <h2 class="description">Get in touch with our Team.</h2>
      
      <br></br>
      <form id="contact-form" method="POST">
