--- a/Home/rooms.html
+++ b/Home/rooms.html
@@ -3,11 +3,11 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Rooms</title>
    <link rel="stylesheet" type="text/css" href="rooms.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
  </head>
  <footer class="top-footer">
   <div class="footer-buttons">
@@ -16,6 +16,7 @@
     <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
   </div>
 </footer>
+
  <body>
    <header>
      <nav>
@@ -32,6 +33,40 @@
        </div>
      </nav>
     </header>
+
+    <section class="grid-container">
+      <div class="room1-image">
+        <img src="../images/credit_card.jpg">
+      </div>
+      <div class="room1-text">
+        <h2>Classic Chamber</h2>
+        <h2>Description</h2>
+      </div>
+  
+      <div class="room2-image">
+        <img src="../images/chef.jpg" alt="dining table">
+      </div>
+      <div class="room2-text">
+        <h2>Executive Suite</h2>
+        <h2>Description</h2>
+      </div>
+  
+      <div class="room3-image">
+        <img src="../images/gym.jpg" alt="hotel spa">
+      </div>
+      <div class="room3-text">
+        <h2>Opulent Manor</h2>
+        <h2>Description</h2>
+      </div>
+
+      <div class="room4-image">
+        <img src="../images/gym.jpg" alt="hotel spa">
+      </div>
+      <div class="room4-text">
+        <h2>Ultimate Oasis</h2>
+        <h2>Description</h2>
+      </div>
+</section>
 
      <footer>
       <div class="footer-container">
