--- a/Home/signin.html
+++ b/Home/signin.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <nav>
-        <img src="../images/logo.png" alt="Continental Hotel logo">
+        <img  src="../images/logo.png" alt="Continental Hotel logo">
         <ul>
          <li><a href="home.html">HOME</a></li>
          <li><a href="rooms.html">ROOMS</a></li>
@@ -34,5 +34,37 @@
       </nav>
     </header>
   </body>
+  <section class="grid-container">
+    <img class="pic" src="../images/signin.jpg" alt="hotel background">
+    <div class="container">
+      <h1 class="description">Continental Membership Sign in</h1>
+      <form id="signup-form" action="#" method="POST">
+            
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+  
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+  
+        <h4 class="linktosignin">Not a member? <a href="signup.html">Sign up Here</a></h4>
+  
+        <button class="submit" type="submit">Sign In</button>
+      </form>
+    </div>
+  </section>
+  <footer>
+    <div class="footer-container">
+        <div class="contact-button">
+            <a href="contact.html">Contact Us</a>
+        </div>
+        <div class="social-icons">
+            <a href="#" class="icon-link"><img src="../images/twitter.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/dhayananddd/" class="icon-link"><img src="../images/instagram.png" alt="Instagram"></a>
+            <a href="#" class="icon-link"><img src="../images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.youtube.com/watch?v=AInjPi8d5Sg" class="icon-link"><img src="../images/youtube.png" alt="YouTube"></a>
+        </div>
+  <p>&copy; 2023 Continental Hotel. All rights reserved.</p>
+</div>  
+</footer>
   
 </html>
