--- a/Home/signup.html
+++ b/Home/signup.html
@@ -33,9 +33,11 @@
      </nav>
    </header>
 
+   <section class="grid-container">
  <body>
+  <img class="pic" src="../images/signup.jpg" alt="hotel background">
    <div class="container">
-     <h1 class="description">Hotel Membership Sign Up</h1>
+     <h1 class="description">Continental Membership Sign Up</h1>
      <form id="signup-form" action="#" method="POST">
        <label for="fullname">Full Name:</label>
        <input type="text" id="fullname" name="fullname" required>
@@ -59,7 +61,7 @@
        <button class="submit" type="submit">Sign Up</button>
      </form>
    </div>
-   <script src="signup.js"></script>
+  </section>
 
    <footer>
     <div class="footer-container">
