Changed Opening Hours to operating hours

--- a/Home/contact.html
+++ b/Home/contact.html
@@ -40,7 +40,7 @@
      <br>
      <ul>180 Ang Mo Kio Ave 8, Singapore 569830</ul>
      <br>
-     <h2>Opening Hours</h2>
+     <h2>Operating Hours</h2>
      <br>
      <ul>Sunday - Thursday, 11am - 10pm</ul>
      <br>
