--- a/Home/mbooking.html
+++ b/Home/mbooking.html
@@ -9,30 +9,44 @@
    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
    <title>Manage Booking</title>
 </head>
-<footer class="top-footer">
-   <div class="footer-buttons">
-     <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
-     <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
-     <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
-   </div>
- </footer>
- 
-  <body>
-    <header>
-      <nav>
-        <img src="../images/logo.png" alt="Continental Hotel logo">
-        <ul>
-         <li><a href="home.html">HOME</a></li>
-         <li><a href="rooms.html">ROOMS</a></li>
-         <li><a href="dining.html">DINING</a></li>
-         <li><a href="amenities.html">AMENITIES</a></li>
-         <li><a href="member.html">MEMBERS</a></li>
-        </ul>
-        <div class="book-now-button">
-          <a href="booking.html">BOOK NOW</a>
-        </div>
-      </nav>
-    </header>
-  </body>
+<body>
+  <header>
+    <nav>
+      <img src="../images/logo.png" alt="Continental Hotel logo">
+      <ul>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="rooms.html">ROOMS</a></li>
+        <li><a href="dining.html">DINING</a></li>
+        <li><a href="amenities.html">AMENITIES</a></li>
+        <li><a href="member.html">MEMBERS</a></li>
+      </ul>
+      <div class="book-now-button">
+        <a href="booking.html">BOOK NOW</a>
+      </div>
+    </nav>
+  </header>
+
   
+  <form class="manage-booking-form">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" placeholder="Enter your name" required>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+      <label for="bookingRef">Booking Reference:</label>
+      <input type="text" id="bookingRef" name="bookingRef" placeholder="Enter your booking reference" required>
+
+      <button type="submit">Submit</button>
+  </form>
+  
+
+  <footer class="top-footer">
+    <div class="footer-buttons">
+      <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
+      <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
+      <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
+    </div>
+  </footer>
+</body>
 </html>
