Image added for Rooms page

--- a/Home/rooms.html
+++ b/Home/rooms.html
@@ -36,7 +36,7 @@
 
     <section class="grid-container">
       <div class="room1-image">
-        <img src="../images/credit_card.jpg">
+        <img src="../images/room1.jpg">
       </div>
       <div class="room1-text">
         <h2>Classic Chamber</h2>
@@ -45,7 +45,7 @@
       </div>
   
       <div class="room2-image">
-        <img src="../images/chef.jpg" alt="dining table">
+        <img src="../images/room2.jpg" alt="dining table">
       </div>
       <div class="room2-text">
         <h2>Executive Suite</h2>
@@ -54,7 +54,7 @@
       </div>
   
       <div class="room3-image">
-        <img src="../images/gym.jpg" alt="hotel spa">
+        <img src="../images/room3.jpg" alt="hotel spa">
       </div>
       <div class="room3-text">
         <h2>Opulent Manor</h2>
@@ -63,7 +63,7 @@
       </div>
 
       <div class="room4-image">
-        <img src="../images/gym.jpg" alt="hotel spa">
+        <img src="../images/room4.jpg" alt="hotel spa">
       </div>
       <div class="room4-text">
         <h2>Ultimate Oasis</h2>
