--- a/Home/booking.html
+++ b/Home/booking.html
@@ -2,11 +2,14 @@
 <html>
 <head>
     <title>The Continental - Booking Page</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="booking.css">
     <script src="booking.js"></script>
+    <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap&family=Playfair+Display:400,700,900|Rubik:300,400,700" rel="stylesheet">
     <!-- Plugin CSS -->
     <link href="../vanilla-calendar/vanilla-calendar.min.css" rel="stylesheet">
     <link href="../vanilla-calendar/themes/light.min.css" rel="stylesheet">
@@ -14,29 +17,29 @@
     <!-- Plugin JS -->
     <script src="../vanilla-calendar/vanilla-calendar.min.js" defer></script>
 </head>
-<footer class="top-footer">
-  <div class="footer-buttons">
-    <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
-    <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
-    <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
-  </div>
-</footer>
-<header>
-  <nav>
-    <img src="../images/logo.png" alt="Continental Hotel logo">
-    <ul>
-      <li><a href="home.html">HOME</a></li>
-      <li><a href="rooms.html">ROOMS</a></li>
-      <li><a href="dining.html">DINING</a></li>
-      <li><a href="amenities.html">AMENITIES</a></li>
-      <li><a href="member.html">MEMBERS</a></li>
-    </ul>
-    <div class="book-now-button">
-      <a href="booking.html">BOOK NOW</a>
-    </div>
-  </nav>
-</header>
 <body>
+  <div class="top-footer">
+    <div class="footer-buttons">
+      <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
+      <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
+      <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
+    </div>
+  </div>
+  <header>
+    <nav>
+      <img src="../images/logo.png" alt="Continental Hotel logo">
+      <ul>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="rooms.html">ROOMS</a></li>
+        <li><a href="dining.html">DINING</a></li>
+        <li><a href="amenities.html">AMENITIES</a></li>
+        <li><a href="member.html">MEMBERS</a></li>
+      </ul>
+      <div class="book-now-button">
+        <a href="booking.html">BOOK NOW</a>
+      </div>
+    </nav>
+  </header>
   <div class="gold">
     <form>
       <div class="group">
@@ -100,19 +103,43 @@
   </div>
   <button class="submit" onclick="alert('Thank You!')">Submit</button>
   
-  <footer>
-    <div class="footer-container">
-        <div class="contact-button">
-            <a href="contact.html">Contact Us</a>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-md-4">
+          <h3>Phone Support</h3>
+          <p>24/7 Call us now.</p>
+          <p class="lead"><a href="tel://">+ 1 332 3093 323</a></p>
         </div>
-        <div class="social-icons">
-            <a href="#" class="icon-link"><img src="../images/twitter.png" alt="Twitter"></a>
-            <a href="https://www.instagram.com/dhayananddd/" class="icon-link"><img src="../images/instagram.png" alt="Instagram"></a>
-            <a href="#" class="icon-link"><img src="../images/facebook.png" alt="Facebook"></a>
-            <a href="https://www.youtube.com/watch?v=AInjPi8d5Sg" class="icon-link"><img src="../images/youtube.png" alt="YouTube"></a>
+        <div class="col-md-4">
+          <h3>Connect With Us</h3>
+          <p>We are socialized. Follow us</p>
+          <p>
+            <a href="#" class="pl-0 p-3"><span class="fa fa-facebook"></span></a>
+            <a href="#" class="p-3"><span class="fa fa-twitter"></span></a>
+            <a href="#" class="p-3"><span class="fa fa-instagram"></span></a>
+            <a href="#" class="p-3"><span class="fa fa-vimeo"></span></a>
+            <a href="#" class="p-3"><span class="fa fa-youtube-play"></span></a>
+          </p>
         </div>
+        <div class="col-md-4">
+          <h3>Connect With Us</h3>
+          <p>Join our mailing list for exclusive notifications on events and promotions.</p>
+          <form action="#" class="subscribe">
+            <div class="form-group">
+              <button type="submit"><span class="ion-ios-arrow-thin-right"></span></button>
+              <input type="email" class="form-control" placeholder="Enter email">
+            </div>
+            
+          </form>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-7 text-center">
+          &copy;<script>document.write(new Date().getFullYear());</script> Continental Hotel. All rights reserved
+        </div>
+      </div>
     </div>
-  <p>&copy; 2023 Continental Hotel. All rights reserved.</p>
   </footer>
 </body>
 </html>
