--- a/Home/mbooking.html
+++ b/Home/mbooking.html
@@ -3,13 +3,23 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="css/bootstrap.css">
    <link rel="stylesheet" type="text/css" href="mbooking.css">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
+  <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap&family=Playfair+Display:400,700,900|Rubik:300,400,700" rel="stylesheet">
    <title>Manage Booking</title>
 </head>
 <body>
+  <div class="top-footer">
+    <div class="footer-buttons">
+      <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
+      <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
+      <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
+    </div>
+  </div>
   <header>
     <nav>
       <img src="../images/logo.png" alt="Continental Hotel logo">
@@ -41,11 +51,42 @@
   </form>
   
 
-  <footer class="top-footer">
-    <div class="footer-buttons">
-      <button><a class="fbutton" href="mbooking.html">MANAGE BOOKING</a></button>
-      <button><a class="fbutton" href="signup.html">SIGN UP</a></button>
-      <button><a class="fbutton" href="signin.html">SIGN IN</a></button>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-md-4">
+          <h3>Phone Support</h3>
+          <p>24/7 Call us now.</p>
+          <p class="lead"><a href="tel://">+ 1 332 3093 323</a></p>
+        </div>
+        <div class="col-md-4">
+          <h3>Connect With Us</h3>
+          <p>We are socialized. Follow us</p>
+          <p>
+            <a href="#" class="pl-0 p-3"><span class="fa fa-facebook"></span></a>
+            <a href="#" class="p-3"><span class="fa fa-twitter"></span></a>
+            <a href="#" class="p-3"><span class="fa fa-instagram"></span></a>
+            <a href="#" class="p-3"><span class="fa fa-vimeo"></span></a>
+            <a href="#" class="p-3"><span class="fa fa-youtube-play"></span></a>
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h3>Connect With Us</h3>
+          <p>Join our mailing list for exclusive notifications on events and promotions.</p>
+          <form action="#" class="subscribe">
+            <div class="form-group">
+              <button type="submit"><span class="ion-ios-arrow-thin-right"></span></button>
+              <input type="email" class="form-control" placeholder="Enter email">
+            </div>
+            
+          </form>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-7 text-center">
+          &copy;<script>document.write(new Date().getFullYear());</script> Continental Hotel. All rights reserved
+        </div>
+      </div>
     </div>
   </footer>
 </body>
